<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_timeline"
          android:icon="@android:drawable/ic_menu_agenda"
          android:title="@string/menu_timeline">
    </item>
    <item android:id="@+id/menu_prefs"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menu_prefs">
    </item>

    <item android:id="@+id/menu_status"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/menu_new_status"
           >
    </item>
    <item android:id="@+id/menu_refresh"
              android:icon="@android:drawable/ic_menu_rotate"
              android:title="@string/menu_refresh"
              android:visible="false" >
        </item>


</menu>