<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/user_info"
            android:background="#fffacd"
            android:textSize="8pt"/>


    <TextView
            android:id="@+id/user_info_name"
            android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text=""  />

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/user_info_numberOfTweets"
              android:background="#fffacd"
              android:textSize="8pt"/>


    <TextView
            android:id="@+id/user_info_tweets"
            android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                   />

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/user_info_followers"
              android:background="#fffacd"
              android:textSize="8pt"/>

     <TextView
             android:id="@+id/user_info_followers"
             android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                   />

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/user_info_following"
              android:background="#fffacd"
              android:textSize="8pt"/>

    <TextView
            android:id="@+id/user_info_following"
            android:layout_width="fill_parent"
              android:layout_height="wrap_content"
               />

         <ImageView android:id="@+id/user_info_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
</LinearLayout>